# rust-game-of-life

./: .gitignore  Cargo.toml  artillery.yaml  notes.md
gol_cli/: .gitignore  Cargo.toml
gol_cli/src/: main.rs
gol_cli/src/visualizer/: visualizer.rs  visualizer_pancurses.rs  visualizer_stdout.rs  visualizer_stub.rs
gol_core/: Cargo.toml
gol_core/src/: lib.rs
gol_core/src/common/: mod.rs
gol_core/src/universe/: mod.rs  universe.rs
gol_server/: Cargo.toml
gol_server/src/: main.rs
gol_server/src/error/: mod.rs
gol_server/src/object_cache/: mod.rs
gol_server/src/server/: server.rs
patterns/plaintext/: blinker.txt  glider.txt  glider_mini.txt  square.txt
src/: board2d.rs  gol.rs  gol_2dboard.rs  gol_bitmap.rs  gol_state_hash.rs  main.rs  visualizer_stdout.rs
src/common/: mod.rs
src/gol/: delta.rs  gol.rs  gol_board_2d.rs  mod.rs
src/universe/: mod.rs  universe.rs  universe_board_2d.rs  universe_hash.rs  util.rs
src/visualizer/: mod.rs  visualizer.rs  visualizer_pancurses.rs  visualizer_stdout.rs  visualizer_stub.rs
