[package]
name = "gol_server"
version = "0.1.0"
authors = ["Patrik <patrik.stas@absa.africa>"]
edition = "2018"

[dependencies]
actix-web = "3"
lazy_static = "1.3"
failure = "0.1.6"
serde = "1.0.97"
serde_json = "1.0.40"
serde_derive = "1.0.97"
env_logger = "0.5.10"
log = "0.4"
rand = "0.7.3"
gol_core = { path = "../gol_core" }
#gol_core = { path = "../gol_core", default-features = false, features = ["log"] }

